debug code and modified code